# pilot

./: .gitignore  .goreleaser.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  go.mod  install.ps1  install.sh  llms.txt
.agent/: DEVELOPMENT-README.md
.agent/.context-markers/: .active  before-compact-2026-01-26-initial-mvp.md  before-compact-2026-03-25-cc-optimized-run.md  before-compact-2026-03-25-custom-engine-deploy.md  v35-leaderboard-submitted-2026-03-28.md
.agent/drafts/: README-v2.md  README-v3.md
.agent/product/: ONBOARDING.md
.claude/: settings.json
.github/: FUNDING.yml
cloud/: Makefile  go.mod
cmd/pilot/: allow.go  (+50 more)
configs/: pilot.example.yaml
deploy/: README.md  fly.toml
desktop/: app.go  app_test.go
e2e/: workflow_test.go
pilot-bench/: .gitignore  CHANGELOG-v4.md  README.md  WORKLOG.md  pyproject.toml  refresh-token.sh  run-benchmark.sh  run.sh  submit.sh
pilot-bench/aws/: INFRA-UPDATE-PLAN.md  README.md  __init__.py  config.py  extract_tasks.py  instance_pool.py  orchestrator.py  pattern_sync.py  run-aws-bench.sh  run-bench-task.sh  ssm_executor.py
pilot-bench/pilot_agent/: __init__.py  agent.py  engine.py  patterns.py  prompt_builder.py
pilot-bench/pilot_agent/data/: pilot.db
pilot-bench/pilot_agent/scripts/: analyze-results.py  bootstrap.sh  build-prompt.py  post-fixup.sh  seed-learning-db.py  verify-and-retry.sh
pilot-bench/pilot_agent/templates/: install-pilot-agent.sh.j2  prompt.md.j2
scripts/: auto-fix.sh  check-integration.sh  lib-go.sh  pre-push-gate.sh
stress/: concurrent_test.go  memory_test.go
(+336 files in other folders)
